--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,11 @@ jobs:
 
       - name: Run Bot..
         run: |
-          cd Yukki
-          apt-get update -y && apt-get upgrade -y
-          && apt-get install -y --no-install-recommends ffmpeg
-          && apt-get clean
-          && rm -rf /var/lib/apt/lists/*
-          pip3 install --no-cache-dir --upgrade --requirement requirements.txt
+          apt-get update && sudo apt-get upgrade -y
+          apt-get install python3-pip ffmpeg -y
+          pip install -U pip
+          curl -fssL https://deb.nodesource.com/setup_17.x | sudo -E bash - && sudo apt-get install nodejs -y && npm i -g npm
+          pip install -U -r requirements.txt
           bash start &
           sleep 300m
           
