--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
           sudo apt-get upgrade -y
           apt-get install python3-pip ffmpeg -y
           pip install -U pip
-          curl -fssL https://deb.nodesource.com/setup_17.x | sudo -E bash
-          sudo apt-get install nodejs -y 
+          apt-get install nodejs -y 
           npm i -g npm
           pip install -U -r requirements.txt
           bash start &
