--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,8 @@ jobs:
 
       - name: Run Bot..
         run: |
-          apt-get update -y
-          sudo apt-get upgrade -y
-          apt-get install python3-pip ffmpeg -y
-          pip install -U pip
-          apt-get install nodejs -y 
-          npm i -g npm
-          pip install -U -r requirements.txt
+          cd && cd /app
+          python -m YukkiMusic
           bash start &
           sleep 300m
           
