--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Bot..
         run: |
-          cd BOTMUSIC
+          cd Yukki
           python -m YukkiMusic
           bash start &
           sleep 300m
