--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Run Bot..
         run: |
           cd Yukki
+          pip3 install --no-cache-dir --upgrade --requirement requirements.txt
           python -m YukkiMusic
           bash start &
           sleep 300m
